--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt": "~0.4.5"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "jison": "^0.4.15"
+  }
 }
